--- a/post.html
+++ b/post.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+    <div id="cabecera">cabecera</div>
     <h1>prueba</h1>
     <p>Parrafo de prueba para ver los cambios de git </p>
 </body>
