agregar background aquamarine

--- a/post.html
+++ b/post.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <div id="cabecera">cabecera</div>
+    <div id="cabecera">cabecera es una prueba final</div>
     <h1>prueba</h1>
     <p>Parrafo de prueba para ver los cambios de git </p>
 </body>
