--- a/post.html
+++ b/post.html
@@ -10,5 +10,6 @@
 <body>
     <h1>prueba</h1>
     <p>Parrafo de prueba para ver los cambios de git </p>
+    <p>Parrafo agregad en branch master </p>
 </body>
 </html>
