--- a/post.html
+++ b/post.html
@@ -11,6 +11,6 @@
     <div id="cabecera">cabecera es una prueba final</div>
     <h1>prueba</h1>
     <p>Parrafo de prueba para ver los cambios de git </p>
-    <p>Parrafo agregad en branch master </p>
+    <p>Parrafo Modificado en branch master ok</p>
 </body>
 </html>
