cambio para mostrar desde github

--- a/post.html
+++ b/post.html
@@ -12,5 +12,6 @@
     <h1>prueba</h1>
     <p>Parrafo de prueba para ver los cambios de git </p>
     <p>Parrafo Modificado en branch master ok</p>
+    <p>Cambio desde github</p>
 </body>
 </html>
